@@ -816,9 +816,8 @@ rb_file_lstat(obj)
 #endif
 }
 
-#ifndef HAVE_GROUP_MEMBER
 static int
-group_member(gid)
+rb_group_member(gid)
     GETGROUPS_T gid;
 {
 #ifndef _WIN32
@@ -846,7 +845,6 @@ group_member(gid)
 #endif
     return Qfalse;
 }
-#endif
 
 #ifndef S_IXUGO
 #  define S_IXUGO		(S_IXUSR | S_IXGRP | S_IXOTH)
@@ -885,7 +883,7 @@ eaccess(path, mode)
 
     if (st.st_uid == euid)        /* owner */
 	mode <<= 6;
-    else if (group_member(st.st_gid))
+    else if (rb_group_member(st.st_gid))
 	mode <<= 3;
 
     if ((st.st_mode & mode) == mode) return 0;
@@ -1312,7 +1310,7 @@ test_grpowned(obj, fname)
     struct stat st;
 
     if (rb_stat(fname, &st) < 0) return Qfalse;
-    if (group_member(st.st_gid)) return Qtrue;
+    if (rb_group_member(st.st_gid)) return Qtrue;
 #endif
     return Qfalse;
 }
@@ -3897,7 +3895,7 @@ rb_stat_grpowned(obj)
     VALUE obj;
 {
 #ifndef _WIN32
-    if (group_member(get_stat(obj)->st_gid)) return Qtrue;
+    if (rb_group_member(get_stat(obj)->st_gid)) return Qtrue;
 #endif
     return Qfalse;
 }
@@ -3961,7 +3959,7 @@ rb_stat_R(obj)
 	return st->st_mode & S_IRUSR ? Qtrue : Qfalse;
 #endif
 #ifdef S_IRGRP
-    if (group_member(get_stat(obj)->st_gid))
+    if (rb_group_member(get_stat(obj)->st_gid))
 	return st->st_mode & S_IRGRP ? Qtrue : Qfalse;
 #endif
 #ifdef S_IROTH
@@ -4029,7 +4027,7 @@ rb_stat_W(obj)
 	return st->st_mode & S_IWUSR ? Qtrue : Qfalse;
 #endif
 #ifdef S_IWGRP
-    if (group_member(get_stat(obj)->st_gid))
+    if (rb_group_member(get_stat(obj)->st_gid))
 	return st->st_mode & S_IWGRP ? Qtrue : Qfalse;
 #endif
 #ifdef S_IWOTH
@@ -4100,7 +4098,7 @@ rb_stat_X(obj)
 	return st->st_mode & S_IXUSR ? Qtrue : Qfalse;
 #endif
 #ifdef S_IXGRP
-    if (group_member(get_stat(obj)->st_gid))
+    if (rb_group_member(get_stat(obj)->st_gid))
 	return st->st_mode & S_IXGRP ? Qtrue : Qfalse;
 #endif
 #ifdef S_IXOTH
